<resources>
    <string name="compare_caps">COMPARE</string>
    <string name="progress_caps">PROGRESS</string>
    <string name="change">Change</string>
    <string name="change_caps">CHANGE</string>
    <string name="view_caps">VIEW</string>
    <string name="days">Days</string>
    <string name="weeks">Weeks</string>
    <string name="months">Months</string>
    <string name="no_avatars_description">Track &amp; Compare your body changes by taking a second body scan.</string>
    <string name="no_avatars_heading">Measure. Track. Transform</string>
    <string name="empty_comparation_sign">-</string>
    <string name="tbf_caps">TBF</string>
    <string name="chest_caps">CHEST</string>
    <string name="waist_caps">WAIST</string>
    <string name="hips_caps">HIPS</string>
    <string name="thighs_caps">THIGHS</string>
    <string name="weight_caps">WEIGHT</string>
    <string name="height_caps">HEIGHT</string>
</resources>
