<?xml version="1.0" encoding="utf-8"?>
<com.myfiziq.sdk.views.BackgroundLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MFTProgressTabParent">

    <com.myfiziq.sdk.views.LockableNestedScrollView
        android:id="@+id/progressTabScrollview"
        style="@style/MFTProgressTabScrollview"
        android:fillViewport="true"
        android:visibility="gone"
        tools:visibility="visible">

        <com.myfiziq.sdk.views.BackgroundConstraintlayout
            android:id="@+id/constraintLayout"
            style="@style/MFTProgressTabContainer">

            <com.myfiziq.sdk.views.AvatarLayout
                android:id="@+id/progressAvatarContainer"
                style="@style/MFTProgressTabAvatarContainerContainer"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout style="@style/MFTProgressTabAvatarContainer">

                    <com.myfiziq.sdk.views.AvatarViewSpinner
                        android:id="@+id/avatarOne"
                        android:layout_width="match_parent"
                        android:layout_height="350dp"
                        android:layout_above="@+id/avatarOneDate" />

                    <LinearLayout
                        android:id="@+id/avatarOneSel"
                        style="@style/MFTProgressTabCircleButtonContainerContainer"
                        android:layout_above="@+id/avatarOneDate"
                        android:visibility="invisible">

                        <com.myfiziq.sdk.views.FixedAspectRatioFrameLayout style="@style/MFTProgressTabCircleButtonContainer">

                            <com.myfiziq.sdk.views.CircleTextView
                                android:id="@+id/avatarOneChange"
                                style="@style/MFTProgressTabCircleButton"
                                android:text="@string/change_caps" />

                        </com.myfiziq.sdk.views.FixedAspectRatioFrameLayout>

                        <com.myfiziq.sdk.views.FixedAspectRatioFrameLayout style="@style/MFTProgressTabCircleButtonContainer">

                            <com.myfiziq.sdk.views.CircleTextView
                                android:id="@+id/avatarOneView"
                                style="@style/MFTProgressTabCircleButton"
                                android:text="@string/view_caps" />

                        </com.myfiziq.sdk.views.FixedAspectRatioFrameLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/avatarOneDate"
                        style="@style/MFTProgressTabAvatarDate"
                        android:layout_above="@+id/avatarOneMeasurement"
                        tools:text="14 MAR '18" />

                    <TextView
                        android:id="@+id/avatarOneMeasurement"
                        style="@style/MFTProgressTabAvatarMeasurement"
                        tools:text="83.1 cm" />

                </RelativeLayout>

                <RelativeLayout style="@style/MFTProgressTabAvatarContainer">

                    <com.myfiziq.sdk.views.AvatarViewSpinner
                        android:id="@+id/avatarTwo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_above="@+id/avatarTwoDate" />

                    <LinearLayout
                        android:id="@+id/avatarTwoSel"
                        style="@style/MFTProgressTabCircleButtonContainerContainer"
                        android:layout_above="@+id/avatarTwoDate"
                        android:visibility="invisible">

                        <com.myfiziq.sdk.views.FixedAspectRatioFrameLayout style="@style/MFTProgressTabCircleButtonContainer">

                            <com.myfiziq.sdk.views.CircleTextView
                                android:id="@+id/avatarTwoChange"
                                style="@style/MFTProgressTabCircleButton"
                                android:text="@string/change_caps" />

                        </com.myfiziq.sdk.views.FixedAspectRatioFrameLayout>

                        <com.myfiziq.sdk.views.FixedAspectRatioFrameLayout style="@style/MFTProgressTabCircleButtonContainer">

                            <com.myfiziq.sdk.views.CircleTextView
                                android:id="@+id/avatarTwoView"
                                style="@style/MFTProgressTabCircleButton"
                                android:text="@string/view_caps" />

                        </com.myfiziq.sdk.views.FixedAspectRatioFrameLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/avatarTwoDate"
                        style="@style/MFTProgressTabAvatarDate"
                        android:layout_above="@+id/avatarTwoMeasurement"
                        tools:text="14 MAR '18" />

                    <TextView
                        android:id="@+id/avatarTwoMeasurement"
                        style="@style/MFTProgressTabAvatarMeasurement"
                        tools:text="83.1 cm" />

                </RelativeLayout>
            </com.myfiziq.sdk.views.AvatarLayout>


            <TextView
                android:id="@+id/avatarDeltaTitle"
                style="@style/MFTProgressTabAvatarDeltaTitle"
                app:layout_constraintBottom_toTopOf="@+id/avatarDeltaMeasurement"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />


            <ImageView
                android:id="@+id/avatarDeltaIndicator"
                style="@style/MFTProgressTabAvatarDeltaIndicator"
                app:layout_constraintBottom_toBottomOf="@+id/avatarDeltaMeasurement"
                app:layout_constraintLeft_toLeftOf="@+id/avatarDeltaTitle"
                app:layout_constraintRight_toLeftOf="@+id/avatarDeltaMeasurement"
                app:layout_constraintTop_toTopOf="@+id/avatarDeltaMeasurement" />


            <TextView
                android:id="@+id/avatarDeltaMeasurement"
                style="@style/MFTProgressTabAvatarDeltaMeasurement"
                app:layout_constraintBottom_toBottomOf="@+id/progressAvatarContainer"
                app:layout_constraintLeft_toRightOf="@+id/avatarDeltaIndicator"
                app:layout_constraintRight_toRightOf="@+id/avatarDeltaTitle"
                tools:text="0.3%" />

            <com.myfiziq.sdk.views.BackgroundRelativeLayout
                android:id="@+id/measurementTypePagerContainer"
                style="@style/MFTProgressMeasurementTypePagerContainer"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/avatarDeltaMeasurement">

                <com.myfiziq.sdk.views.TintableImageView
                    android:id="@+id/pageLeft"
                    style="@style/MFTProgressMeasurementTypePagerArrowLeft" />

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/measurementPager"
                    style="@style/MFTProgressMeasurementTypePagerText"
                    android:layout_toLeftOf="@+id/pageRight"
                    android:layout_toRightOf="@+id/pageLeft" />

                <com.myfiziq.sdk.views.TintableImageView
                    android:id="@+id/pageRight"
                    style="@style/MFTProgressMeasurementTypePagerArrowRight" />

            </com.myfiziq.sdk.views.BackgroundRelativeLayout>

            <View
                android:id="@+id/divider2"
                style="@style/MFTProgressTabDivider"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/measurementTypePagerContainer" />

            <com.myfiziq.sdk.views.MYQTabLayout
                android:id="@+id/durationTabs"
                style="@style/MFTProgressDurationTabContainer"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider2">

                <com.google.android.material.tabs.TabItem
                    style="@style/MFTProgressTabDurationTab"
                    android:text="@string/days" />

                <com.google.android.material.tabs.TabItem
                    style="@style/MFTProgressTabDurationTab"
                    android:text="@string/weeks" />

                <com.google.android.material.tabs.TabItem
                    style="@style/MFTProgressTabDurationTab"
                    android:text="@string/months" />

            </com.myfiziq.sdk.views.MYQTabLayout>

            <com.myfiziq.sdk.views.SwipeableViewPager
                android:id="@+id/chartPager"
                style="@style/MFTProgressTabChart"
                app:layout_constraintHeight_default="spread"
                app:layout_constraintHeight_min="250dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/durationTabs" />

        </com.myfiziq.sdk.views.BackgroundConstraintlayout>

    </com.myfiziq.sdk.views.LockableNestedScrollView>

    <ProgressBar
        android:id="@+id/progressTabLoadingSpinner"
        style="@style/MFTProgressTabLoadingSpinner"
        android:visibility="visible"
        tools:visibility="gone" />


</com.myfiziq.sdk.views.BackgroundLinearLayout>